@@ -1,0 +1,73 @@
+<ui version="4.0" >
+ <class>EngineColorsWidget</class>
+ <widget class="QWidget" name="EngineColorsWidget" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>400</width>
+    <height>300</height>
+   </rect>
+  </property>
+  <property name="windowTitle" >
+   <string>Form</string>
+  </property>
+  <layout class="QHBoxLayout" >
+   <item>
+    <layout class="QGridLayout" >
+     <item row="0" column="1" >
+      <widget class="QComboBox" name="colorCombo" >
+       <item>
+        <property name="text" >
+         <string>Element</string>
+        </property>
+       </item>
+       <item>
+        <property name="text" >
+         <string>Residue</string>
+        </property>
+       </item>
+       <item>
+        <property name="text" >
+         <string>Red</string>
+        </property>
+       </item>
+       <item>
+        <property name="text" >
+         <string>Green</string>
+        </property>
+       </item>
+       <item>
+        <property name="text" >
+         <string>Blue</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2" >
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="0" >
+      <widget class="QLabel" name="label" >
+       <property name="text" >
+        <string>Color by:</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
+</ui>
